# a2a-hiring-agent

./: .gitignore  README.md
backend/: .pre-commit-config.yaml  README.md  auth.py  main.py  orchestrator.py  pyproject.toml
backend/agents/agent_1_github_searcher/: graph.py  nodes.py  server.py  state.py
backend/agents/agent_2_screener/: graph.py  nodes.py  server.py  state.py
backend/agents/agent_3_email_agent/: graph.py  nodes.py  server.py  state.py
backend/shared/: functions.py  models.py  settings.py
backend/tests/: _stubs.py  conftest.py  test_main.py  test_orchestrator.py  test_shared_functions.py  test_stubs.py
backend/tests/agent1/: test_graph.py  test_nodes.py  test_server.py
backend/tests/agent2/: test_graph.py  test_nodes.py  test_server.py
backend/tests/agent3/: test_graph.py  test_nodes.py  test_server.py
frontend/: .lintstagedrc.json  .prettierrc  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/pages/mainPage/: AgentProgessModal.tsx  MainPage.tsx  useSearch.ts
frontend/src/pages/resultsPage/: ConfigModal.tsx  FreeSlotsModal.tsx  ResultsPage.tsx  useSetFreeSlot.ts  useSetSelected.ts
frontend/src/shared/: functions.ts  models.ts  types.ts
frontend/src/shared/components/: PageHeader.tsx
