[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "langgraph",
    "a2a-sdk==0.3.24",
    "a2a-sdk[http-server]==0.3.24",
    "instructor",
    "groq",
    "pydantic",
    "pydantic-settings>=2.14.1",
    "litellm>=1.84.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
]
