[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "langgraph",
    "a2a-sdk==0.3.24",
    "a2a-sdk[http-server]==0.3.24",
    "instructor",
    "groq",
    "pydantic",
    "pydantic-settings>=2.14.1",
    "litellm>=1.84.0",
    "google-api-python-client",
    "google-auth-oauthlib",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
